--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Ultimate Office Quiz App</title>
         <link rel="stylesheet" href="main.css">
+        <meta name="description" content="How well do you know the TV show The Office?">
     </head>
-
     <body>
         <nav>
-
+            <div class="question-number">Question: <div><span>1</span> of 10</div></div>
+            <div class="quiz-app-name">The Ultimate Office <div>Quiz App</div></div>
+            <div class="total-score">Total Score: <span>0</span></div>
         </nav>
-        <header>
-            <h1>The Ultimate Office Quiz</h1>
-        </header>
         <main>
-            <p class="teaser">Do you have what it takes to join the ranks of Dunder Mifflin: The People Person's Paper People?</p>
-            <button class="start">Let's Find Out!</button>
+            <section class="main-title question js-question">
+                <h1>The Ultimate Office Quiz App</h1>
+            </section>
+            <section class="subtitle answers js-answers">
+                <p class="teaser">Do you have what it takes to join the ranks of Dunder Mifflin: The People Person's Paper People?</p>
+            </section>
+            <section class="start feedback">
+                <button role="button" class="start-quiz js-start-quiz">Let's Find Out!</button>
+                <button role="button" class="submit-answer js-submit-answer">Submit</button>
+            </section>
         </main>
         <footer>
-            
             <audio class="theme" controls loop>
                 <source src="theme-music.ogg"/>
                 <source src="theme-music.mp3"/>
             </audio>
-            <p class="audio-prompt">Need some music to get in the mood?</p>
+            <p class="audio-theme-prompt">Need some music to get in the mood?</p>
         </footer>
         <script
         src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
         crossorigin="anonymous"></script>
+        <script src="appdata.js"></script>
         <script src="index.js"></script>
     </body>
 
