added volume lowering js code on load

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </section>
         </main>
         <footer>
-            <audio class="theme" controls loop>
+            <audio id="office-theme" class="theme" controls loop>
                 <source src="theme-music.ogg"/>
                 <source src="theme-music.mp3"/>
             </audio>
