ready for submission

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Ultimate Office Quiz App</title>
         <link rel="stylesheet" href="main.css">
-        <meta name="description" content="How well do you know the TV show The Office?">
+        <meta name="description" content="How well do you know the The Office?">
     </head>
     <body>
-        <nav>
+        <section class="question-and-score">
             <div class="question-number">Question: <div><span class="question-number">1</span> of 10</div></div>
             <div class="quiz-app-name">The Ultimate Office <div>Quiz App</div></div>
             <div class="total-score">Total Score: <span class="score">0</span></div>
-        </nav>
+        </section>
         <main>
             <section class="main-title question js-question">
                 <h1>The Ultimate Office <div>Quiz App</div></h1>
@@ -21,7 +21,7 @@
                 <p class="teaser">Do you have what it takes to join the ranks of Dunder Mifflin: The People Person's Paper People?</p>
             </section>
             <section class="start feedback js-feedback">
-                <button role="button" class="start-quiz js-start-quiz">Let's Find Out!</button>
+                <button class="start-quiz js-start-quiz">Let's Find Out!</button>
             </section>
         </main>
         <footer>
@@ -38,8 +38,7 @@
         src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
         crossorigin="anonymous"></script>
-        <script src="appdata.js"></script>
+        <script src="appData.js"></script>
         <script src="index.js"></script>
     </body>
-
 </html>
